--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,19 @@
-.git
-Dockerfile
 node_modules
+.pnpm-store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 dist
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.DS_Store
+*.tsbuildinfo
+.vscode
+.git
+README.md
+test
+coverage
